[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsec-kak = { path = "../../parsec-kak/", version = "*" }
parsec-core = { path = "../../parsec-core/", version = "*" }
parsec-term = { path = "../../parsec-term/", version = "*" }
parsec = { path = "../" }
